<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="Пожалуйста, введите адрес вашего проживания:"></TextView>
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/City"></TextView>
    <Spinner android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/spinner_city"></Spinner>
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Street"></TextView>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/editText_street"></EditText>
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/House_number"></TextView>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="number" android:id="@+id/editText_number"></EditText>
    <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/checkBoxBuilding" android:text="@string/cbBuilding" android:checked="false"></CheckBox>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="number" android:id="@+id/editText_building" android:enabled="false"></EditText>
    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout1" android:layout_height="wrap_content">
        <Button android:onClick="button_make_request_click"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Send_Request" android:id="@+id/button_Send_Request"></Button>
        <Button android:onClick="button_clear_click" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Clear" android:id="@+id/button_Clear"></Button>
    </LinearLayout>
        
</LinearLayout>
