<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">
    <TextView android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:layout_gravity="center_vertical" android:text="@string/Program_Name" android:layout_height="wrap_content"></TextView>
    <ImageView android:id="@+id/imageView1" android:src="@drawable/logo" android:layout_height="wrap_content" android:layout_width="match_parent"></ImageView>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/button_Handbook_Show" android:text="@string/button_Handbook_Show_label"></Button>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/button_Make_Request" android:text="@string/button_Make_Request_label"></Button>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/button_About_Show" android:text="@string/button_About_Show_label"></Button>
    
        
</LinearLayout>
